[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Background/BackShade.png" type="Texture" id=2]
[ext_resource path="res://Assets/Resources/Themes/MainTheme.tres" type="Theme" id=3]
[ext_resource path="res://Assets/Sprites/Background/menuback.png" type="Texture" id=4]

[node name="Menu" type="Control"]
margin_right = 320.0
margin_bottom = 180.0
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Title" type="ColorRect" parent="."]
anchor_right = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 96.0

[node name="Main" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -70.0
margin_right = 64.0
margin_bottom = -8.0
mouse_filter = 2
theme = ExtResource( 3 )

[node name="Play" type="Button" parent="Main"]
margin_right = 128.0
margin_bottom = 18.0
focus_neighbour_top = NodePath("../Exit")
focus_neighbour_bottom = NodePath("../Settings")
mouse_filter = 2
text = "Play"
flat = true

[node name="Settings" type="Button" parent="Main"]
margin_top = 22.0
margin_right = 128.0
margin_bottom = 40.0
focus_neighbour_top = NodePath("../Play")
focus_neighbour_bottom = NodePath("../Exit")
mouse_filter = 2
text = "Settings"
flat = true

[node name="Exit" type="Button" parent="Main"]
margin_top = 44.0
margin_right = 128.0
margin_bottom = 62.0
focus_neighbour_top = NodePath("../Settings")
focus_neighbour_bottom = NodePath("../Play")
mouse_filter = 2
text = "Exit"
flat = true

[node name="Settings" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )

[node name="BackgroundColor" type="TextureRect" parent="Settings"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="Back" type="NinePatchRect" parent="Settings"]
margin_left = 42.0
margin_top = 17.0
margin_right = 278.0
margin_bottom = 163.0
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 32, 32 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="Settings/Back"]
margin_left = 4.0
margin_top = 4.0
margin_right = 231.0
margin_bottom = 145.0
grow_horizontal = 0
grow_vertical = 0

[node name="Label" type="Label" parent="Settings/Back/VBoxContainer"]
margin_right = 227.0
margin_bottom = 12.0
text = "Settings"
align = 1

[node name="MasterVol" type="HBoxContainer" parent="Settings/Back/VBoxContainer"]
margin_top = 16.0
margin_right = 227.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="Settings/Back/VBoxContainer/MasterVol"]
margin_top = 2.0
margin_right = 111.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Master Volume"

[node name="HSlider" type="HSlider" parent="Settings/Back/VBoxContainer/MasterVol"]
margin_left = 115.0
margin_right = 227.0
margin_bottom = 16.0
focus_neighbour_top = NodePath("../../../Back")
focus_neighbour_bottom = NodePath("../../MusicVol/HSlider")
mouse_filter = 2
size_flags_horizontal = 3
min_value = -80.0
max_value = 0.0
step = 5.0
value = -60.0

[node name="MusicVol" type="HBoxContainer" parent="Settings/Back/VBoxContainer"]
margin_top = 36.0
margin_right = 227.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="Settings/Back/VBoxContainer/MusicVol"]
margin_top = 2.0
margin_right = 111.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Music Volume"

[node name="HSlider" type="HSlider" parent="Settings/Back/VBoxContainer/MusicVol"]
margin_left = 115.0
margin_right = 227.0
margin_bottom = 16.0
mouse_filter = 2
size_flags_horizontal = 3
min_value = -80.0
max_value = 0.0
step = 5.0
value = -60.0

[node name="SFXVol" type="HBoxContainer" parent="Settings/Back/VBoxContainer"]
margin_top = 56.0
margin_right = 227.0
margin_bottom = 72.0

[node name="Label" type="Label" parent="Settings/Back/VBoxContainer/SFXVol"]
margin_top = 2.0
margin_right = 111.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "SFX Volume"

[node name="HSlider" type="HSlider" parent="Settings/Back/VBoxContainer/SFXVol"]
margin_left = 115.0
margin_right = 227.0
margin_bottom = 16.0
mouse_filter = 2
size_flags_horizontal = 3
min_value = -80.0
max_value = 0.0
step = 5.0
value = -60.0

[node name="ScrSize" type="HBoxContainer" parent="Settings/Back/VBoxContainer"]
margin_top = 76.0
margin_right = 227.0
margin_bottom = 92.0

[node name="Label" type="Label" parent="Settings/Back/VBoxContainer/ScrSize"]
margin_top = 2.0
margin_right = 111.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Screen size"

[node name="HSlider" type="HSlider" parent="Settings/Back/VBoxContainer/ScrSize"]
margin_left = 115.0
margin_right = 227.0
margin_bottom = 16.0
mouse_filter = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 0.0
value = 1.0

[node name="Fullscreen" type="HBoxContainer" parent="Settings/Back/VBoxContainer"]
margin_top = 96.0
margin_right = 227.0
margin_bottom = 120.0

[node name="Label" type="Label" parent="Settings/Back/VBoxContainer/Fullscreen"]
margin_top = 6.0
margin_right = 199.0
margin_bottom = 18.0
size_flags_horizontal = 3
text = "Fullscreen"

[node name="CheckBox" type="CheckBox" parent="Settings/Back/VBoxContainer/Fullscreen"]
margin_left = 203.0
margin_right = 227.0
margin_bottom = 24.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../../ScrSize/HSlider")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../../../Back")
mouse_filter = 2

[node name="Back" type="Button" parent="Settings/Back"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -23.0
margin_right = 64.0
margin_bottom = -5.0
focus_neighbour_left = NodePath(".")
focus_neighbour_top = NodePath("../VBoxContainer/Fullscreen/CheckBox")
focus_neighbour_right = NodePath(".")
focus_neighbour_bottom = NodePath("../VBoxContainer/MasterVol/HSlider")
mouse_filter = 2
text = "Back"
flat = true

[connection signal="pressed" from="Main/Play" to="." method="playPressed"]
[connection signal="pressed" from="Main/Settings" to="." method="settingsPressed"]
[connection signal="pressed" from="Main/Exit" to="." method="exitPressed"]
[connection signal="value_changed" from="Settings/Back/VBoxContainer/MasterVol/HSlider" to="." method="masterVolChanged"]
[connection signal="value_changed" from="Settings/Back/VBoxContainer/MusicVol/HSlider" to="." method="musicVolChanged"]
[connection signal="value_changed" from="Settings/Back/VBoxContainer/SFXVol/HSlider" to="." method="sfxVolChanged"]
[connection signal="value_changed" from="Settings/Back/VBoxContainer/ScrSize/HSlider" to="." method="screenSizeChanged"]
[connection signal="toggled" from="Settings/Back/VBoxContainer/Fullscreen/CheckBox" to="." method="fullscreenToggled"]
[connection signal="pressed" from="Settings/Back/Back" to="." method="backPressed"]
